--- a/develop/frontend/android/app/src/main/AndroidManifest.xml
+++ b/develop/frontend/android/app/src/main/AndroidManifest.xml
@@ -26,8 +26,8 @@
             </intent-filter>
         </activity>
         <meta-data
-        android:name="com.google.android.geo.API_KEY"
-        android:value="${GOOGLE_MAPS_API_KEY}" />
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDPXHsfUhMOIyJhy7yP9jzTgcNmARSispw" />
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
         <meta-data
