--- a/develop/frontend/pubspec.yaml
+++ b/develop/frontend/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   google_maps_flutter: ^2.2.0
   http: ^0.13.3
   flutter_dotenv: ^5.0.2
-
+  supabase_flutter: ^1.4.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
