--- a/develop/frontend/pubspec.yaml
+++ b/develop/frontend/pubspec.yaml
@@ -24,6 +24,9 @@ dependencies:
   flutter_keyboard_visibility: ^5.4.0
   provider: ^6.0.5
   hive_flutter: ^1.1.0
+  google_maps_cluster_manager: ^1.0.0
+  geolocator: ^9.0.2
+ 
 dev_dependencies:
   flutter_test:
     sdk: flutter
