--- a/develop/frontend/pubspec.yaml
+++ b/develop/frontend/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
     sdk: flutter
   
   cupertino_icons: ^1.0.8
-
+  
   # Versioni compatibili per la mappa e i popup
   flutter_map_marker_popup: ^5.1.0
   latlong2: ^0.8.1
@@ -31,15 +31,24 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
+  flutter_launcher_icons: ^0.9.2
 
 flutter:
   uses-material-design: true
   assets:
+    - assets/prova.json
     - assets/marker.png
     - assets/config.env
     - assets/farmacie.png
     - assets/home.png
     - assets/mappe.png
     - assets/profile.png
+    - assets/profile2.png
     - assets/logo_grande.png
     - assets/logo_piccolo.png
+  
+flutter_icons:
+  android: true
+  ios: true
+  image_path_android: "assets/logo_piccolo.png"
+  image_path_ios: "assets/icon/logo_piccolo.png"
